Fixed: Bug 32185 - confirm appointment dialog broken and not useable on mobile

--- a/ui/apps/io.ox/core/tk/dialog.less
+++ b/ui/apps/io.ox/core/tk/dialog.less
@@ -101,6 +101,7 @@
 }
 
 .mobile-dialog.io-ox-dialog-popup {
+
     overflow-y: scroll;
     max-height: 95%;
     width: 95%;
@@ -109,14 +110,23 @@
     .border-radius(0);
 
     .modal-footer {
+
         .row {
-            [class*="col-"] { margin-left: 0; }
+
+            [class*="col-"] {
+                margin-left: 0;
+            }
+
             .btn {
                 width: 100%;
                 margin: 2px 0;
             }
-            .col-md-3 { width: inherit; }
+
         }
+
     }
-    h3 { font-size: 20px; }
+
+    h3 {
+        font-size: 20px;
+    }
 }
